--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Minics</title>
+  <title>Online Store</title>
 
 
   <!-- bootstrap core css -->
@@ -83,7 +83,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                Minics
+                Online Store
               </span>
             </a>
 
@@ -722,7 +722,7 @@
             <h5>
               <a href="" class="navbar-brand">
                 <span>
-                  Minics
+                  Online Store
                 </span>
               </a>
             </h5>
