--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="http://templates.beatsnoop.com/">Free Html Templates</a>
+        <a href="https://www.freelancer.com/u/venkiJFreelancer/">Venki the Freelancer</a>
       </p>
     </div>
   </footer>
